--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
-0.01 - 2006-01-19
------------------
-  - Initial Release
+0.02. 2006-02-20
+- Fixed Config::Mini::instantiate so it doesn't return dupe object
+- Fixed small parsing issue
+
+0.01. 2006-01-19
+- Initial Release
