--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.03. 2008-06-08
+- Added OO style interface
+- Added %include, %package, %constructor, %args, %hashref directives
+
 0.02. 2006-02-20
 - Fixed Config::Mini::instantiate so it doesn't return dupe object
 - Fixed small parsing issue
