Import of JHIVER/Config-Mini-0.04 from CPAN.
gitpan-cpan-distribution: Config-Mini
gitpan-cpan-version:      0.04
gitpan-cpan-path:         JHIVER/Config-Mini-0.04.tar.gz
gitpan-cpan-author:       JHIVER
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.04. 2008-06-08
+- Added %noargs directive
+
 0.03. 2008-06-08
 - Added OO style interface
 - Added %include, %package, %constructor, %args, %hashref directives
